--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<script src="/js/pixi.js"></script>
 		<script src="/js/app.js"></script>
 		<script src="/js/peter.js"></script>
+		<script src="/js/slider.js"></script>
 		<script>
 			window.onload = new App();
 		</script>
