--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 		<style>
 		</style>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenLite.min.js"></script>
-		<script src="/js/pixi.js"></script>
-		<script src="/js/app.js"></script>
-		<script src="/js/peter.js"></script>
-		<script src="/js/slider.js"></script>
+		<script src="./js/pixi.js"></script>
+		<script src="./js/app.js"></script>
+		<script src="./js/peter.js"></script>
+		<script src="./js/slider.js"></script>
 		<script>
 			window.onload = new App();
 		</script>
